# docs/swagger.json
@@ -1,11 +1,21 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a go ldap rest API Documentation.",
+        "title": "Go Ldap Rest API",
+        "contact": {
+            "name": "API Support",
+            "url": "https://cihantaylan.com",
+            "email": "cihantaylan@cihantaylan.com"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8088",
+    "basePath": "/api/v1",
     "paths": {
-        "/admin/users": {
-            "get": {
+        "/ldap/login": {
+            "post": {
+                "description": "EG;\u003cbr\u003eLdapURL: ldap://ldap.forumsys.com:389\u003cbr\u003eBindDN: cn=read-only-admin,dc=example,dc=com\u003cbr\u003eBindPassword: password,",
                 "consumes": [
                     "application/json"
                 ],
@@ -13,16 +23,49 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Get Users"
+                    "Ldap"
                 ],
-                "summary": "Get Users",
+                "summary": "Login",
+                "operationId": "Login",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ldap_connector.ConnectParams"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": ""
+                            "$ref": "#/definitions/ldap_connector.ConnectParams"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "ldap_connector.ConnectParams": {
+            "type": "object",
+            "required": [
+                "bindDN",
+                "bindPassword",
+                "ldapURL"
+            ],
+            "properties": {
+                "bindDN": {
+                    "type": "string"
+                },
+                "bindPassword": {
+                    "type": "string"
+                },
+                "ldapURL": {
+                    "type": "string"
                 }
             }
         }
